--- a/css/main.sass
+++ b/css/main.sass
@@ -40,6 +40,7 @@ body
   font-feature-settings: "liga", "dlig"
 
 .logo-readium
+  border-radius: 50%
   position: fixed
   left: 10px
   top: 10px
@@ -51,10 +52,8 @@ body
   .logo
     display: block
     position: absolute
-    top: $rs/2
-    left: $rs/2
-    width: $rs*2
-    height: $rs*2
+    width: $rs*3
+    height: $rs*3
     background-size: cover
     background-repeat: no-repeat
 
